--- a/index.ipynb
+++ b/index.ipynb
@@ -135,9 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "f5840412-6056-11e9-a5db-c57085b35ea9"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"330fc683-13c4-4da0-8dcb-cc164d72f3f9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"330fc683-13c4-4da0-8dcb-cc164d72f3f9\", [{\"type\": \"scatter\", \"uid\": \"f5a6ebb2-6056-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"330fc683-13c4-4da0-8dcb-cc164d72f3f9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"330fc683-13c4-4da0-8dcb-cc164d72f3f9\", [{\"type\": \"scatter\", \"uid\": \"f5a6ebb2-6056-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([\n",
     "    {}\n",
