Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,11 +260,11 @@
        "data": [
         {
          "marker": {
-          "color": "rgba(255, 182, 193, 1.9)"
+          "color": "rgba(255, 182, 193, 1)"
          },
          "mode": "markers",
          "type": "scatter",
-         "uid": "e4723066-6058-11e9-a5db-c57085b35ea9",
+         "uid": "e8ca5f30-6058-11e9-a5db-c57085b35ea9",
          "x": [
           1,
           2,
@@ -282,10 +282,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"e9d48789-fd98-4be2-846d-81095de4997d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e9d48789-fd98-4be2-846d-81095de4997d\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1.9)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"e475f7b4-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"bee8ba15-79c9-4628-bc70-07f469db0128\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bee8ba15-79c9-4628-bc70-07f469db0128\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"e8d02e38-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"e9d48789-fd98-4be2-846d-81095de4997d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e9d48789-fd98-4be2-846d-81095de4997d\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1.9)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"e475f7b4-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"bee8ba15-79c9-4628-bc70-07f469db0128\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bee8ba15-79c9-4628-bc70-07f469db0128\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"e8d02e38-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, )'}}\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, 1)'}}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
