Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -260,11 +260,11 @@
        "data": [
         {
          "marker": {
-          "color": "rgba(255, 182, 193, 1)"
+          "color": "rgba(255, 182, 350, 1)"
          },
          "mode": "markers",
          "type": "scatter",
-         "uid": "f669e61a-6058-11e9-a5db-c57085b35ea9",
+         "uid": "07743802-6059-11e9-a5db-c57085b35ea9",
          "x": [
           1,
           2,
@@ -282,10 +282,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"b50e1685-7e87-44ef-aae0-6429d1eea5f3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b50e1685-7e87-44ef-aae0-6429d1eea5f3\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"f6744128-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3c76da71-aeca-4ce3-bd53-0a1f71cdb337\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3c76da71-aeca-4ce3-bd53-0a1f71cdb337\", [{\"marker\": {\"color\": \"rgba(255, 182, 350, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"077830ce-6059-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"b50e1685-7e87-44ef-aae0-6429d1eea5f3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b50e1685-7e87-44ef-aae0-6429d1eea5f3\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"f6744128-6058-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3c76da71-aeca-4ce3-bd53-0a1f71cdb337\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3c76da71-aeca-4ce3-bd53-0a1f71cdb337\", [{\"marker\": {\"color\": \"rgba(255, 182, 350, 1)\"}, \"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"077830ce-6059-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, , 1)'}}\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 350, 1)'}}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
