--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +356,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "marker": {
+          "color": "rgba(255, 182, 193, .9)"
+         },
+         "mode": "markers",
+         "name": "Some dots",
+         "type": "scatter",
+         "uid": "1aebb2fc-6059-11e9-a5db-c57085b35ea9",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          1,
+          2,
+          3,
+          4
+         ]
+        },
+        {
+         "marker": {
+          "color": "blue"
+         },
+         "name": "Our nice line",
+         "type": "scatter",
+         "uid": "1aebd7a0-6059-11e9-a5db-c57085b35ea9",
+         "x": [
+          1.5,
+          2.5,
+          3.5,
+          4.5
+         ],
+         "y": [
+          3,
+          5,
+          7,
+          9
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"32fc8cda-4a83-42e7-9025-2b75f483e09c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32fc8cda-4a83-42e7-9025-2b75f483e09c\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, .9)\"}, \"mode\": \"markers\", \"name\": \"Some dots\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"1af086f6-6059-11e9-a5db-c57085b35ea9\"}, {\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"1af08926-6059-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"32fc8cda-4a83-42e7-9025-2b75f483e09c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32fc8cda-4a83-42e7-9025-2b75f483e09c\", [{\"marker\": {\"color\": \"rgba(255, 182, 193, .9)\"}, \"mode\": \"markers\", \"name\": \"Some dots\", \"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"1af086f6-6059-11e9-a5db-c57085b35ea9\"}, {\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"1af08926-6059-11e9-a5db-c57085b35ea9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([\n",
     "    trace0, trace1\n",
